# Regulatory-Compliance-Assistant-for-Banking

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/eval/: golden_questions.json
src/: cli.py  config.py  health.py  logging_config.py  pipeline.py
src/api/: main.py
src/api/static/: index.html
src/api/static/assets/css/: main.css
src/api/static/assets/js/: app.js
src/eval/: _ragas_compat.py  ragas_eval.py
src/indexing/: chunk.py  embedder.py  pipeline.py  sparse.py  store.py
src/ingestion/: config.py  loader.py  parser.py  pipeline.py  robust_extraction.py
src/observability/: langfuse_tracing.py
src/rag/: chain.py  prompts.py  reranker.py  retriever.py
tests/: conftest.py  test_api.py  test_chunk.py  test_config.py  test_eval.py  test_observability.py  test_rag.py  test_ragas_eval.py  test_rerank.py  test_store.py
