[project]
name = "regulatory-compliance-assistant-for-banking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "langchain>=1.3.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "lxml>=6.1.0",
    typer>=0.12.0,
    "markdown>=3.10.2",
    "pdf2image>=1.17.0",
    "pdfminer-six>=20260107",
    "pi-heif>=1.3.0",
    "pypdf>=6.11.0",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "python-dotenv>=1.2.2",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.28",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.18.0",
    "tqdm>=4.67.3",
    "unstructured>=0.22.28",
    "unstructured-inference>=1.6.11",
    "unstructured-pytesseract>=0.3.15",
]
