[project]
name = "regulatory-compliance-assistant-for-banking"
version = "0.1.0"
description = "RAG assistant for regulatory banking documents"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.136.3",
    "fastembed>=0.8.0",
    "langchain-core>=1.4.0",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "lxml>=6.1.0",
    "pdf2image>=1.17.0",
    "pdfminer-six>=20260107",
    "pi-heif>=1.3.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.2",
    "python-magic>=0.4.27",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.18.0",
    "typer>=0.12.0",
    "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
ingest = [
    "unstructured>=0.22.28",
    "unstructured-inference>=1.6.11",
    "unstructured-pytesseract>=0.3.15",
]
observability = [
    "langfuse>=3.15,<5",
]

[tool.uv]
conflicts = [
    [
        { extra = "ingest" },
        { extra = "observability" },
    ],
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "datasets>=5.0.0",
    "langchain-community>=0.4.2",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ragas>=0.2.14,<0.3",
]
